--- a/style.css
+++ b/style.css
@@ -427,3 +427,18 @@ header img.logo {
      .rectangle-1 .mainmenu a {
       display: inline-block;
     }
+
+.dmfa-logo {
+      position: absolute;
+      top:-3.75px;
+      height:70px;
+      left:0px;
+      margin:0;
+      padding:0;
+    }
+    .dmfa-logo img{
+      height: 70px;
+      width: auto;
+      position: relative;
+      top: 3.75px;
+}
