--- a/style.css
+++ b/style.css
@@ -124,6 +124,7 @@ footer p {
 /* velikosti posameznih kartic za staff memberje */
 .centered {
   text-align: center;
+  font-family: Roboto;
 }
 
 .staff-container {
@@ -378,7 +379,7 @@ header img.logo {
   flex-wrap: wrap;
   width: 100%;
 }
-@media (max-width: 900px) {
+@media (max-width: 1600px) {
   .rectangle-1 {
     justify-content: flex-end;
     padding-right: 1rem;
